PhraseSearcher replace list.of to Arrays.asList